--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Webpage Logo -->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" />
     <!-- Webpage Title -->
-    <title>Aditya Vikram Singh</title>
+    <title>Colin Vu</title>
 
     <!-- Import CSS: Main Stylesheet -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -33,8 +33,8 @@
     <div id="particles-js">
       <div class="header">
         <h1>
-          <span class="site-title">ADITYA VIKRAM SINGH</span>
-          <span class="site-description">Programmer • Web Developer • Graphic Designer</span>
+          <span class="site-title">COLIN VU</span>
+          <span class="site-description">Software Developer • Researcher • Media Designer</span>
         </h1>
         <div class="header-icons">
           <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/avs1508/">
@@ -46,13 +46,14 @@
           <a aria-label="My Résumé" target="_blank" href="https://www.adityavsingh.com/resume.html">
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
-          <a aria-label="Send Email" href="mailto:avsingh@umass.edu" target="_blank"
+          <a aria-label="Send Email" href="mailto:colinhvu@gmail.com" target="_blank"
             ><i class="icon fa fa-envelope"></i
           ></a>
         </div>
         <div class="header-links">
           <a class="link" href="#about" data-scroll>About Me</a>
           <a class="link" href="#projects" data-scroll>Projects</a>
+          <a class="link" href="#projects" data-scroll>Photography</a>
         </div>
       </div>
       <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
@@ -62,7 +63,7 @@
     <section id="about">
       <!-- User Introduction-->
       <div class="user-details">
-        <h1>My Story</h1>
+        <h1>Literally Me</h1>
         <picture>
           <source
             type="image/webp"
@@ -79,13 +80,7 @@
           />
         </picture>
         <p>
-          I am a junior in the College of Information and Computer Sciences at the University of Massachusetts Amherst,
-          pursuing an undergraduate degree. I am majoring in Computer Science, with intent to double major in
-          Mathematics with Statistics and Data Science concentration. I'm involved as a Software Developer for BUILD
-          UMass, where I use my software engineering skills for pro-bono app/web development and tech consulting for the
-          Amherst community. I also serve as a Designer for the HackUMass Organizing Team, responsible for graphics
-          design and production for the annual hackathon. I am interested in exploring the fields of Software
-          Engineering, Data Science, and Machine Learning, and I am open to opportunities for the same.
+          Hello! I'm a junior at Georgia Tech studying Computer Science, with concentrations in Media, Modeling, and Simulation. I am also working towards a minor in Industrial Design to explore the interaction between media architecture and aethestics with software development. I've been working with the Georgia Tech Research Institute (GTRI) building a front-end plaform for a water purification management system, and with GTRI's VIP research program performing geographic data analyses to inform real national policy development. I'm excited to learn more about Software Development, Data Science, and Machine Learning in the coming future, and to use my skills to support societally important businesses and research areas. I'm always eager to find new opportunities to delve into these areas and talk to experts within them.
         </p>
       </div>
 
