--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
     <!-- Description Metadata-->
     <meta name="description" content="Portfolio Website" />
     <!-- Author Metadata -->
-    <meta name="author" content="Aditya Vikram Singh" />
+    <meta name="author" content="Colin Vu" />
     <!-- Keyword Metadata -->
     <meta
       name="keywords"
-      content="Aditya Singh, Aditya Vikram Singh, Aditya Vikram Singh DPS,
-        Aditya Vikram Singh DPSRKP, Aditya Vikram Singh UMass, Aditya Vikram
-        Singh UMass Amherst, Aditya Vikram Singh New Delhi, Aditya Vikram
-        Singh Amherst, Aditya Vikram Singh ISSDC, Aditya Vikram Singh NASA,
-        Aditya Vikram Singh, Aditya Vikram Singh Website, Aditya V Singh"
+      content=""
     />
     <!-- Webpage Logo -->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" />
@@ -67,14 +63,14 @@
         <picture>
           <source
             type="image/webp"
-            srcset="./assets/img/webp/Professional-Picture-Me.webp"
-            alt="Professional Me"
+            srcset="./assets/img/webp/portrait-final-square.webp"
+            alt="Portrait"
             width="20%"
             style="border-radius: 50%"
           />
           <img
-            src="./assets/img/jpg/Professional-Picture-Me.jpg"
-            alt="Professional Me"
+            src="./assets/img/jpg/portrait-final-square.jpg"
+            alt="Portrait"
             width="20%"
             style="border-radius: 50%"
           />
@@ -170,16 +166,16 @@
         </div>
       </div>
 
-      <!-- User Project #2: Summer 2020 Project -->
+      <!-- User Project #2: Summer 2021 Project -->
       <div class="user-projects">
         <div class="images-left">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Perpetual-Crusades.webp" alt="Perpetual Crusades" />
-            <img alt="Perpetual Crusades" src="./assets/img/jpg/Perpetual-Crusades.jpg" />
+            <source type="image/webp" srcset="./assets/img/webp/false-news-detection-model.webp" alt="False News Detection Model" />
+            <img alt="False News Detection Model" src="./assets/img/jpg/false-news-detection-model.jpg" />
           </picture>
         </div>
         <div class="contents-right" style="text-align: center">
-          <h3>Perpetual Crusades</h3>
+          <h3>False News Detection Model</h3>
           <img
             height="32"
             width="32"
@@ -196,9 +192,7 @@
           &nbsp;
           <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
           <p style="text-align: justify">
-            I created a two-player online dice-based board game with a theme loosely set around Dungeons & Dragons. It
-            was developed as a submission for Penn Apps XXI, using ReactJS and CSS Grid Layouts for design and hosted on
-            GitHub Pages.
+            A machine learning logistic regressionn model detecting the likelihood that a news article is "fake news" based on keywords, domain name extensions, and tags. It gathers charged words using their frequency within training data articles already marked as real or fake. Early versions of the model were Pandas-based, but this current one is NumPy based.
           </p>
           <a class="project-link" target="_blank" href="https://github.com/AVS1508/Summer-2020-Project"
             >Check it out!</a
@@ -206,72 +200,30 @@
         </div>
       </div>
 
-      <!-- User Project #3: COVID-19 Tracker App -->
+      <!-- User Project #3: Template for adding projects, in progress -->
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/COVID19-Tracker-App.webp" alt="COVID-19 Tracker App" />
-            <img alt="COVID-19 Tracker App" src="./assets/img/jpg/COVID19-Tracker-App.jpg" />
+            <source type="image/webp" srcset="./assets/img/webp/construction.webp" alt="COVID-19 Tracker App" />
+            <img alt="Temp Icon" src="./assets/img/jpg/construction.jpg" />
           </picture>
         </div>
         <div class="contents" style="text-align: center">
-          <h3>COVID-19 Tracker App</h3>
+          <h3>Under Construction</h3>
           <div>
-            <img
-              height="32"
-              width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/javascript.svg"
-              style="filter: invert(96%) sepia(47%) saturate(4151%) hue-rotate(338deg) brightness(100%) contrast(95%)"
-            />
+            
           </div>
           <p style="text-align: justify">
-            I created a web application for tracking the spread of COVID-19. Using Johns Hopkins University Center For
-            Systems Science and Engineering API, the website processes the COVID-19 data to create statistical
-            projections through graphs and charts.
+            This section is under development! Come back soon for more information. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
-          <a class="project-link" target="_blank" href="https://www.adityavsingh.com/covid19-tracker-app">
-            Check it out!
-          </a>
         </div>
       </div>
 
-      <!-- Use Project #4: Valuto: Account Management System -->
-      <div class="user-projects">
-        <div class="images-left">
-          <picture>
-            <source
-              type="image/webp"
-              srcset="./assets/img/webp/Valuto-Account-Management.webp"
-              alt="Valuto: Account Management System"
-            />
-            <img alt="Valuto: Account Management System" src="./assets/img/jpg/Valuto-Account-Management.jpg" />
-          </picture>
-        </div>
-        <div class="contents-right" style="text-align: center">
-          <h3>Valuto: Account Management System</h3>
-          <div>
-            <img
-              height="32"
-              width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/cplusplus.svg"
-              style="filter: invert(22%) sepia(77%) saturate(1486%) hue-rotate(183deg) brightness(101%) contrast(103%)"
-            />
-          </div>
-          <p style="text-align: justify">
-            I developed a CLI system for accounting management and financial statement maintenance. The purpose of the
-            system is to maintain a record of the funds received, used, disseminated and donated by an organization.
-            Details of transactions and maintenance of a budget and tallying of current balance/inventory in cash/kind
-            is incorporated in this system.
-          </p>
-          <a class="project-link" target="_blank" href="https://github.com/AVS1508/Valuto-Account-Management-System">
-            Check it out!
-          </a>
-        </div>
-      </div>
-    </section>
+      
+
 
     <footer class="footer">
-      <p>&copy; Aditya Vikram Singh, 2020</p>
+      <p>&copy; Colin Vu, 2024</p>
     </footer>
 
     <!-- Import JS: Particles Theme -->
