--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
 
   <body>
     <div id="particles-js">
+      <video autoplay muted loop id="myVideo">
+        <source src="assets/video/placeholder.mp4" type="video/mp4">
+      </video>
       <div class="header">
         <h1>
           <span class="site-title">COLIN VU</span>
           <span class="site-description">Software Developer • Researcher • Media Designer</span>
         </h1>
         <div class="header-icons">
-          <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/avs1508/">
+          <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/colin-vu-33550322b/">
             <i class="icon fa fa-linkedin" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Github Profile" target="_blank" href="https://github.com/AVS1508">
+          <a aria-label="My Github Profile" target="_blank" href="https://github.com/ColinVu/">
             <i class="icon fa fa-github-alt" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Résumé" target="_blank" href="https://www.adityavsingh.com/resume.html">
+          <a aria-label="My Résumé" target="_blank" href="assets/pdf/placeholder.pdf">
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
           <a aria-label="Send Email" href="mailto:colinhvu@gmail.com" target="_blank"
@@ -49,7 +52,7 @@
         <div class="header-links">
           <a class="link" href="#about" data-scroll>About Me</a>
           <a class="link" href="#projects" data-scroll>Projects</a>
-          <a class="link" href="#projects" data-scroll>Photography</a>
+          <a class="link" href="#media" data-scroll>Media</a>
         </div>
       </div>
       <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
@@ -59,7 +62,7 @@
     <section id="about">
       <!-- User Introduction-->
       <div class="user-details">
-        <h1>Literally Me</h1>
+        <h1>About Me</h1>
         <picture>
           <source
             type="image/webp"
@@ -76,7 +79,7 @@
           />
         </picture>
         <p>
-          Hello! I'm a junior at Georgia Tech studying Computer Science, with concentrations in Media, Modeling, and Simulation. I am also working towards a minor in Industrial Design to explore the interaction between media architecture and aethestics with software development. I've been working with the Georgia Tech Research Institute (GTRI) building a front-end plaform for a water purification management system, and with GTRI's VIP research program performing geographic data analyses to inform real national policy development. I'm excited to learn more about Software Development, Data Science, and Machine Learning in the coming future, and to use my skills to support societally important businesses and research areas. I'm always eager to find new opportunities to delve into these areas and talk to experts within them.
+          Hello! I'm a junior at Georgia Tech studying Computer Science, with concentrations in Media, Modeling, and Simulation. I am also working towards a minor in Industrial Design to explore the interaction of media architecture and aethestics with software development. I've been working with the Georgia Tech Research Institute (GTRI) building a front-end platform for a water purification management system, and with GTRI's VIP research program performing geographic data analyses to inform real national policy development. I'm excited to learn more about Software Development, Data Science, and Machine Learning in the coming future, and to use my skills to support societally important businesses and research areas. I'm always eager to find new opportunities to delve into these areas and talk to experts within them. Take a look at my work!
         </p>
       </div>
 
@@ -89,6 +92,8 @@
           <i class="devicon-java-plain-wordmark colored"></i>
           <i class="devicon-cplusplus-plain colored"></i>
           <i class="devicon-javascript-plain colored"></i>
+          <i class="devicon-c-plain colored"></i>
+          <i class="devicon-csharp-plain colored"></i>
           <p>My favorite languages for systems programming, software engineering, and data analysis.</p>
         </div>
 
@@ -96,30 +101,45 @@
         <div class="tech">
           <h2>Front-End</h2>
           <i class="devicon-react-original colored"></i>
-          <i class="devicon-bootstrap-plain-wordmark colored"></i>
           <i class="devicon-html5-plain-wordmark colored"></i>
           <i class="devicon-css3-plain-wordmark colored"></i>
+          <i class="devicon-php-plain colored"></i>
           <p>My preferred technologies for front-end web development and component design.</p>
         </div>
 
-        <!-- Technology Stack #3: Back-End -->
-        <div class="tech">
-          <h2>Back-End</h2>
-          <i class="devicon-nodejs-plain colored"></i>
-          <i class="devicon-express-original-wordmark colored"></i>
-          <i class="devicon-mongodb-plain-wordmark colored"></i>
-          <i class="devicon-postgresql-plain-wordmark colored"></i>
-          <p>My preferred technologies for back-end web programming and database architecture.</p>
-        </div>
-
-        <!-- Technology Stack #4: Tools -->
+        <!-- Technology Stack #3: Tools -->
         <div class="tech">
           <h2>Tools</h2>
           <i class="devicon-git-plain-wordmark colored"></i>
           <i class="devicon-visualstudio-plain colored"></i>
           <i class="devicon-github-plain-wordmark colored"></i>
-          <i class="devicon-docker-plain-wordmark colored"></i>
-          <p>My favorite tools for version control, code editing, and container orchestration.</p>
+          <img
+            height="64"
+            width="64" 
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/intellij/intellij-original.svg" />
+          <img
+              height="64"
+              width="64"
+              src="./assets/img/jpg/devicon-arcgis-wordmark.jpg"
+            />
+          <p>My favorite tools for version control, code editing, and more.</p>
+        </div>
+        <!-- Technology Stack #3: Tools -->
+        <div class="tech">
+          <h2>Tools</h2>
+          <i class="devicon-git-plain-wordmark colored"></i>
+          <i class="devicon-visualstudio-plain colored"></i>
+          <i class="devicon-github-plain-wordmark colored"></i>
+          <img
+            height="64"
+            width="64" 
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/intellij/intellij-original.svg" />
+          <img
+              height="64"
+              width="64"
+              src="./assets/img/jpg/devicon-arcgis-wordmark.jpg"
+            />
+          <p>My favorite framew.</p>
         </div>
       </div>
     </section>
@@ -134,35 +154,40 @@
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Personal-Resume-Website.webp" alt="Personal Website" />
-            <img alt="Personal Website" src="./assets/img/jpg/Personal-Resume-Website.jpg" />
+            <source type="image/webp" srcset="./assets/img/webp/img-crossing-toad.webp" alt="Mobile Application" />
+            <img alt="Personal Website" src="./assets/img/jpg/img-crossing-toad.jpg" />
           </picture>
         </div>
         <div class="contents" style="text-align: center">
-          <h3>Personal Website</h3>
+          <h3>Crossing Toad</h3>
           <div>
             <img
               height="32"
               width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/react.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg"
               style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)"
             />
             &nbsp;
             <img
               height="32"
               width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/bootstrap.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg"
+              style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)"
+            />
+            &nbsp;
+            <img
+              height="32"
+              width="32"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/xml/xml-original.svg"
               style="filter: invert(24%) sepia(14%) saturate(2270%) hue-rotate(222deg) brightness(102%) contrast(90%)"
             />
             &nbsp;
             <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
           </div>
           <p style="text-align: justify">
-            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to showcase my web
-            presence, story, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            I led a mobile app development team to create Crossing Toad, a video game made from Java and Android XML in Android Studio. I coded the game physics, as well the controls and button UI. My main goal was to make a challenging game experience, where enemies home into the player and have collision detection that prevents them from taking the same path as other enemies.
           </p>
-          <a class="project-link" target="_blank" href="https://www.adityavsingh.com/">Check it out!</a>
+          <a class="project-link" target="_blank" href="https://github.com/ColinVu/Crossing-Toad">Check it out!</a>
         </div>
       </div>
 
@@ -170,8 +195,8 @@
       <div class="user-projects">
         <div class="images-left">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/false-news-detection-model.webp" alt="False News Detection Model" />
-            <img alt="False News Detection Model" src="./assets/img/jpg/false-news-detection-model.jpg" />
+            <source type="image/webp" srcset="./assets/img/webp/img-false-news-detection-model.webp" alt="False News Detection Model" />
+            <img alt="False News Detection Model" src="./assets/img/jpg/img-false-news-detection-model.jpg" />
           </picture>
         </div>
         <div class="contents-right" style="text-align: center">
@@ -190,11 +215,17 @@
             style="filter: invert(33%) sepia(29%) saturate(3844%) hue-rotate(184deg) brightness(90%) contrast(84%)"
           />
           &nbsp;
+          <img
+            height="32"
+            width="32"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+          />
+          &nbsp;
           <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
           <p style="text-align: justify">
-            A machine learning logistic regressionn model detecting the likelihood that a news article is "fake news" based on keywords, domain name extensions, and tags. It gathers charged words using their frequency within training data articles already marked as real or fake. Early versions of the model were Pandas-based, but this current one is NumPy based.
+            A machine learning logistic regression model detecting the likelihood that a news article is "fake news" based on keywords, domain name extensions, and tags. It gathers charged words using their frequency within training data articles already marked as real or fake. Early versions of the model were Pandas-based, but this current one is NumPy based.
           </p>
-          <a class="project-link" target="_blank" href="https://github.com/AVS1508/Summer-2020-Project"
+          <a class="project-link" target="_blank" href="https://github.com/ColinVu/fake-news-detection-model"
             >Check it out!</a
           >
         </div>
@@ -204,7 +235,7 @@
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/construction.webp" alt="COVID-19 Tracker App" />
+            <source type="image/webp" srcset="./assets/img/webp/construction.webp" alt="Under Construction" />
             <img alt="Temp Icon" src="./assets/img/jpg/construction.jpg" />
           </picture>
         </div>
@@ -218,6 +249,83 @@
           </p>
         </div>
       </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="media">
+      <div class="user-details">
+        <h1>Media</h1>
+      </div>
+      <p>
+        Creative works I've made, in progress!
+      </p>
+      <!-- User Project #1: Personal Résumé Website -->
+
+      <div class="user-projects">
+        <div class="images-left">
+          <video autoplay muted loop id="newVideo">
+            <source src="assets/video/placeholder.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
+
+      <div class="user-projects">
+        <div class="images-right">
+          <picture>
+            <source type="image/jpg" srcset="./assets/img/jpg/img-atlanta-marta.jpg" alt="Downtown Atlanta from the Marta" />
+            <img alt="Downtown Atlanta from the Marta" src="./assets/img/jpg/img-atlanta-marta.jpg" />
+          </picture>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
+
+      <div class="user-projects">
+        <div class="images-left">
+          <picture>
+            <source type="image/jpg" srcset="./assets/img/jpg/img-mtn-view.jpg" alt="Light rail trains in Mountain View, CA" />
+            <img alt="Light rail trains in Mountain View, CA" src="./assets/img/jpg/img-mtn-view.jpg" />
+          </picture>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
+
+      <div class="user-projects">
+        <div class="images-right">
+          <picture>
+            <source type="image/jpg" srcset="./assets/img/jpg/img-atlanta-krog.jpg" alt="Krog Street Tunnel in Atlanta, GA" />
+            <img alt="Krog Street Tunnel in Atlanta, GA" src="./assets/img/jpg/img-atlanta-krog.jpg" />
+          </picture>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
+
+      <div class="user-projects">
+        <div class="images-left">
+          <picture>
+            <source type="image/jpg" srcset="./assets/img/jpg/img-los-angeles.jpg" alt="Train approaching Los Angeles, CA" />
+            <img alt="Train approaching Los Angeles, CA" src="./assets/img/jpg/img-los-angeles.jpg" />
+          </picture>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
+
+      <div class="user-projects">
+        <div class="images-right">
+          <picture>
+            <source type="image/jpg" srcset="./assets/img/jpg/img-atlanta-fog.jpg" alt="Foggy night in Atlanta, GA" />
+            <img alt="Foggy night in Atlanta, GA" src="./assets/img/jpg/img-atlanta-fog.jpg" />
+          </picture>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
+    </section>
 
       
 
@@ -225,9 +333,6 @@
     <footer class="footer">
       <p>&copy; Colin Vu, 2024</p>
     </footer>
-
-    <!-- Import JS: Particles Theme -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- Import JS: Sweet Scroll -->
     <script src="./assets/js/sweet-scroll.min.js"></script>
     <!-- Import JS: Google Analytics -->
