Final version of first site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <div id="particles-js">
       <video autoplay muted loop id="myVideo">
-        <source src="assets/video/placeholder.mp4" type="video/mp4">
+        <source src="assets/video/header-vid.mp4" type="video/mp4">
       </video>
       <div class="header">
         <h1>
@@ -244,15 +244,7 @@
       </p>
       <!-- User Project #1: Personal Résumé Website -->
 
-      <div class="user-projects">
-        <div class="images-left">
-          <video autoplay muted loop id="newVideo">
-            <source src="assets/video/placeholder.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="contents" style="text-align: center">
-        </div>
-      </div>
+      
 
       <div class="user-projects">
         <div class="images-right">
