--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a aria-label="My Github Profile" target="_blank" href="https://github.com/ColinVu/">
             <i class="icon fa fa-github-alt" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Résumé" target="_blank" href="assets/pdf/placeholder.pdf">
+          <a aria-label="My Résumé" target="_blank" href="assets/pdf/resume-2-8-24.pdf">
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
           <a aria-label="Send Email" href="mailto:colinhvu@gmail.com" target="_blank"
@@ -244,7 +244,15 @@
       </p>
       <!-- User Project #1: Personal Résumé Website -->
 
-      
+      <div class="user-projects">
+        <div class="images-left">
+          <video autoplay muted loop id="newVideo">
+            <source src="assets/video/placeholder.mp4" type="video/mp4">
+          </video>
+        </div>
+        <div class="contents" style="text-align: center">
+        </div>
+      </div>
 
       <div class="user-projects">
         <div class="images-right">
