Updated resume, formatting on 2/11/24

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a aria-label="My Github Profile" target="_blank" href="https://github.com/ColinVu/">
             <i class="icon fa fa-github-alt" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Résumé" target="_blank" href="assets/pdf/resume-2-8-24.pdf">
+          <a aria-label="My Résumé" target="_blank" href="assets/pdf/resume.pdf">
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
           <a aria-label="Send Email" href="mailto:colinhvu@gmail.com" target="_blank"
